# HR-Assistant

./: .gitignore  app.py  compare.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  increment_agent.py  main.py  pi.py  pyproject.toml  requirements.txt  similarity.py
tools/: increment_tool.py
